[gd_scene load_steps=3 format=3 uid="uid://dhfmx5sfx1rek"]

[ext_resource type="Script" uid="uid://bwg4xgryw71g" path="res://Code/interacting_component.gd" id="1_qp20p"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ioo8l"]
radius = 1.25

[node name="InteractingComponent" type="Node3D"]
script = ExtResource("1_qp20p")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_ioo8l")

[node name="InteractLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4915123, 0)
text = "[E] to interact"

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
